deps/v8/test/message/fail/modules-duplicate-export5.out
*%(basename)s:9: SyntaxError: Duplicate export of 'foo'
export * as foo from "./doesnt-even-matter.js";
            ^^^
SyntaxError: Duplicate export of 'foo'

